# 2025-Zeeperio

./: .gitignore  README.md  Zeeperio.md  Zelections.md  google_docs_with_reviews.txt
2026 VOTING/: extended-abstract.tex
2026 VOTING/bib/: pulp.bib
2026 VOTING/figures/: evaluations.tex  pipeline.tex
2026 VOTING/setup/: packages.tex
2026 WTSC/: main.tex
2026 WTSC Camera Ready/: main.tex
2026 WTSC Camera Ready/figures/: election.tex  properties.tex  protocol.pptx  variables.tex
2026 WTSC Camera Ready/sections/: abstract.tex  appendix.tex  body.tex  protocol-diagram.tex  vv.tex
2026 WTSC Full/bib/: pulp.bib
2026 WTSC Full/figures/: abstraction.tex  evaluations.tex
2026 WTSC Full/sections/: e2e.tex  proof.tex
2026 WTSC Full/setup/: macros.tex
2026 WTSC camera_ready/: main.tex
2026 WTSC camera_ready/sections/: body.tex  e2e.tex  implementation.tex  protocol-diagram.tex
2026 WTSC/bib/: pulp.bib
2026 WTSC/figures/: PIOP.key  (+4 more)
WTSC_paper/: .gitignore  main.tex  readme.md
paper/: .gitignore  main.tex  zeeperio.tex
zeeperio_v1/: .gitignore
zeeperio_v1/zeeperio-rs/crates/zeeperio-cli/: Cargo.toml
zeeperio_v1/zeeperio-rs/crates/zeeperio-cli/src/: audit.rs  inclusion_open.rs  lib.rs  main.rs
zeeperio_v1/zeeperio-rs/crates/zeeperio-cli/tests/: audit.rs  inclusion_open.rs  kzg_verify.rs
zeeperio_v1/zeeperio-rs/crates/zeeperio-core/: Cargo.toml
zeeperio_v1/zeeperio-rs/crates/zeeperio-core/src/: lib.rs  proof_inclusion.rs  proof_main.rs  proof_receipt.rs
zeeperio_v1/zeeperio-rs/crates/zeeperio-kzg/: Cargo.toml
zeeperio_v1/zeeperio-rs/crates/zeeperio-kzg/src/: lib.rs
(+34 files in other folders)
