[package]
name = "zeeperio-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
zeeperio-core = { path = "../zeeperio-core" }
zeeperio-kzg = { path = "../zeeperio-kzg" }
zeeperio-types = { path = "../zeeperio-types" }
serde = { version = "1", features = ["derive"] }
ark-bn254 = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-serialize = "0.4"
ark-poly = "0.4"
ark-poly-commit = "0.4"
rand = "0.8"
rand_chacha = "0.3"
hex = "0.4"
ethabi = "18"
