[package]
name = "zeeperio-core"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
ark-poly = "0.4"
ark-poly-commit = "0.4"
ark-serialize = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
zeeperio-kzg = { path = "../zeeperio-kzg" }
zeeperio-types = { path = "../zeeperio-types" }
sha2 = "0.10"
blake3 = "1"
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3"

[dev-dependencies]
tempfile = "3"
